EDU-507 Fix plugin selector footer buttons on mobile

--- a/src/components/plugin-selector-dialog.less
+++ b/src/components/plugin-selector-dialog.less
@@ -4,3 +4,12 @@
   display: flex;
   justify-content: space-between;
 }
+
+.PluginSelectorDialog-pasteButton {
+  display: inline-block;
+  padding-left: 10px;
+
+  @media @edu-media-phone {
+    display: none;
+  }
+}
